@@ -9,8 +9,8 @@ desc 'Default: run unit tests.'
 task :default => [:test]
 
 # ------- Default Package ----------
-RUBY_DEBUG_BASE="0.10.2"
-RUBY_DEBUG_IDE_VERSION = "0.4.1"
+RUBY_DEBUG_BASE="0.10.3"
+RUBY_DEBUG_IDE_VERSION = "0.4.2"
 
 FILES = FileList[
   'bin/*',
