@@ -115,7 +115,7 @@ module Debugger
           unless RUBY_PLATFORM =~ /darwin/i # Mac OS X seems to have problem with 'localhost'
             host ||= 'localhost' # nil does not seem to work for IPv6, localhost does
           end
-          $stderr.printf "Fast Debugger (ruby-debug-ide 0.4.1) listens on #{host}:#{port}\n"
+          $stderr.printf "Fast Debugger (ruby-debug-ide 0.4.2) listens on #{host}:#{port}\n"
           server = TCPServer.new(host, port)
           while (session = server.accept)
             begin
